marketplace-middleware/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: marketplace-middleware
  name: marketplace-middleware
  namespace: marketplace-middleware
  annotations:
    secret.reloader.stakater.com/reload: "marketplace-middleware"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: marketplace-middleware
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: marketplace-middleware
    spec:
      containers:
        - name: marketplace-middleware
          image: luuna/marketplace-middleware:latest-develop
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /
              port: 3000
              scheme: HTTP
            failureThreshold: 5
            successThreshold: 5
            periodSeconds: 10
            timeoutSeconds: 30
          resources:
            requests:
              memory: "100Mi"
              cpu: "150m"
            limits:
              memory: "250Mi"
              cpu: "250m"
          securityContext:
            readOnlyRootFilesystem: true
            runAsGroup: 10000
            runAsUser: 10000
      enableServiceLinks: true
      imagePullSecrets:
        - name: regcred
      nodeSelector:
        purpose: backend
      restartPolicy: Always
      serviceAccount: marketplace-middleware
      serviceAccountName: marketplace-middleware
