marketplace-middleware/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: marketplace-middleware
    service: marketplace-middleware
  name: marketplace-middleware
  namespace: marketplace-middleware
spec:
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app: marketplace-middleware
  type: ClusterIP
