marketplace-middleware/base/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: marketplace-middleware
  namespace: marketplace-middleware
spec:
  podSelector:
    matchLabels:
      app: marketplace-middleware
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: marketplace-middleware
      ports:
        - protocol: TCP
          port: 3000
  egress:
    - ports:
        - protocol: TCP
          port: 443
        - protocol: TCP
          port: 80
